Constant jittered bug #41993

Closed
opened 2014-09-28 20:38:41 +02:00 by Alexey · 6 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
const_jittered1.png
const_jittered2.png
const_jittered3.png
Exact steps for others to reproduce the error
const_jittered.blend
open, select rendered shading mode
change view and we will see incorrect shadow,
clange anything in this scene(select other object for example)- we will have proper update

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![const_jittered1.png](https://archive.blender.org/developer/F113438/const_jittered1.png) ![const_jittered2.png](https://archive.blender.org/developer/F113440/const_jittered2.png) ![const_jittered3.png](https://archive.blender.org/developer/F113442/const_jittered3.png) **Exact steps for others to reproduce the error** [const_jittered.blend](https://archive.blender.org/developer/F113444/const_jittered.blend) open, select rendered shading mode change view and we will see incorrect shadow, clange anything in this scene(select other object for example)- we will have proper update
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Sergey Sharybin was assigned by Thomas Dinges 2014-09-29 03:48:31 +02:00

This issue was referenced by 52330e5349

This issue was referenced by 52330e5349a9c3ad111beb85211bf8db533cb007

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 52330e5349.

Closed by commit 52330e5349.

This issue was referenced by 1620fa9247

This issue was referenced by 1620fa92478f67139b89f8c1e926a6223eaebe1f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41993
No description provided.