Fix T41993: Constant jittered bug

Rotated coordinate of the ray start was used when calculating
the ray direction, ending up with wrong direction.